# retrofit

./: Cargo.toml  README.md
.github/workflows/: rust.yml
retrofit/: Cargo.toml
retrofit/src/: lib.rs  tests.rs
retrofit_codegen/: Cargo.toml
retrofit_codegen/src/: api.rs  get.rs  lib.rs  post.rs  rocket.rs  routes.rs
retrofit_codegen/src/axum/: get.rs  mod.rs  post.rs  routes.rs
retrofit_codegen/src/rocket/: get.rs  mod.rs  post.rs  routes.rs
src/: lib.rs  tests.rs
