[package]
name = "retrofit"
version = "0.1.5"
edition = "2021"
description = "Automatically generate REST APIs for functions"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server", "client"]
server = ["retrofit_codegen/server"]
client = ["retrofit_codegen/client"]

[dependencies]
retrofit_codegen = "0.1.3"
serde = "1.0.133"
serde_json = "1.0.74"

[dev-dependencies]
tokio = "1.15.0"
reqwasm = "0.4.0"
reqwest = {version="0.11.8", features=["json"]}
rocket = {version="0.5.0-rc.1", features=["json"]}