[package]
name = "retrofit"
version = "0.1.10"
edition = "2021"
description = "Automatically generate REST APIs for functions"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Sidekick-AI/retrofit/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
retrofit_codegen = "0.1.8"
serde = "1.0.133"
serde_json = "1.0.74"

[dev-dependencies]
tokio = "1.15.0"
reqwasm = "0.4.0"
reqwest = {version="0.11.8", features=["json"]}
rocket = {version="0.5.0-rc.1", features=["json"]}
serial_test = "0.5.1"