[package]
name = "retrofit"
version = "0.3.3"
edition = "2021"
description = "Automatically generate REST APIs for functions"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Sidekick-AI/retrofit/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["axum", "client", "server"]
axum = ["retrofit_codegen/axum"]
rocket = ["retrofit_codegen/rocket"]
client = []
server = []

[dependencies]
retrofit_codegen = {version="0.3.3", default-features=false}
serde = "1.0.133"
serde_json = "1.0.74"

[dev-dependencies]
tokio = {version="1.15.0", features=["full"]}
reqwasm = "0.4.0"
reqwest = {version="0.11.8", features=["json"]}
rocket = {version="0.5.0-rc.2", features=["json"]}
serial_test = "0.5.1"
axum = {version="0.6.0-rc.2", features=["headers"]}
http = "0.2.8"