[package]
name = "retrofit_codegen"
version = "0.1.1"
edition = "2021"
description = "proc macro crate for retrofit"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["server", "client"]
server = []
client = []

[dependencies]
quote = "1.0.14"
syn = {version="1.0.85", features=["full"]}
proc-macro2 = "1.0.36"