[package]
name = "retrofit_codegen"
version = "0.4.0"
edition = "2021"
description = "proc macro crate for retrofit"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version="1.0", features=["full"]}
proc-macro2 = "1.0"
